--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
     "react-client-session": "^0.0.7",
+    "react-country-region-selector": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select-country-list": "^2.2.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
