--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.4.0",
     "react-select-country-list": "^2.2.3",
     "web-vitals": "^1.1.2"
   },
