--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,12 @@
 {
   "name": "client",
+  "proxy": "http://localhost:8000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@fortawesome/react-fontawesome": "^0.1.19",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -17,11 +18,13 @@
     "react-client-session": "^0.0.7",
     "react-country-region-selector": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-select": "^5.4.0",
     "react-select-country-list": "^2.2.3",
+    "react-toastify": "^9.0.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
