--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,12 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.2.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-select": "^5.4.0",
     "react-select-country-list": "^2.2.3",
-    "react-toastify": "^9.0.7",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
