--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
+    "express-async-handler": "1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.15",
     "nodemon": "^2.0.19"
