--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,16 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.19",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.3",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.9.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-bootstrap-icons": "^1.5.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-client-session": "^0.0.7",
     "react-country-region-selector": "^3.3.0",
     "react-dom": "^17.0.2",
