--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.3",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.9.1",
+    "mapbox-gl": "^2.10.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.9.1",
@@ -21,6 +22,8 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.2.0",
+    "react-map-gl": "^7.0.19",
+    "react-mapbox-gl": "^5.1.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
