--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:9000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +15,8 @@
     "bootstrap-icons": "^1.9.1",
     "canvasjs-react-charts": "^1.0.5",
     "chart.js": "^2.9.4",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "mapbox-gl": "^2.10.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
