--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "mailgun-js": "^0.22.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.15",
-    "multer": "^1.4.5-lts.1",
+    "multer": "1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.19"
   }
