--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.4.0",
     "react-select-country-list": "^2.2.3",
+    "react-toastify": "9.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -38,7 +39,7 @@
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-},
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
