--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,10 @@
 PORT = 9000
 
-FRONTENDURL = http://localhost:3000
+FRONTENDURL = https://illustrious-sprinkles-adedda.netlify.app
 
-CALLBACK_URL = 'https://4afd-217-21-116-238.ngrok.io'
+# CALLBACK_URL = 'https://4afd-217-21-116-238.ngrok.io'
+
+CALLBACK_URL = 'https://polybaseshop-production.up.railway.app'
 
 DB = "mongodb+srv://gilbertkitetu:Munywoki1@polybase.xpa8qil.mongodb.net/?retryWrites=true&w=majority";
 
