--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "author": "Gilbert kitetu",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "1.1.3",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.5",
